# ascension

./: Bakefile  CMakeLists.txt  README.md  build.sh
src/: boot.c  loader.c  main.c  parser.c  proc.c
src/compiler/: getmod.c  parse.c  prepare.c  read.c
src/compiler/cmds/: cd.c
src/decl/: decl.h
src/env/: ascension.c
src/func/: clrscr.c  create.c  dir.cpp  filemanager.c  goto.c  prntos.c  rrmd.cpp
src/include/: asc_macros.h  common.h
src/interpreter/: interpreter.c  prepare.c  stdparse.c
src/interpreter/cmds/: ls.c  sysrun.c
src/interpreter/helper/: chklsarg.c  err.c  getsz.c
src/interpreter/tokens/: tokens.h
src/sh/: shell.h
src/shared/: incl.h
src/std/: io.h  mem.h  num.h  str.h  symbols.h
src/std/io/: echo.h  flush.h  putmsg.h  read.h  write.h
src/std/mem/: alloc.c  alloc_api.h
src/std/num/: mkint.h
src/std/str/: chr.h  cmp.h  cpy.h  len.h  put.h  sub.h  trm.h
src/std/symbols/: map.h  sym.h  typedef.h
tests/: a.out  parse  parser.c  script.asc  script.ath  t.c
